# ShuffleRouter

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
snap/: snapcraft.yaml
src/: buffer.rs  lib.rs  main.rs  packet.rs  queue.rs
