[package]
name = "shufflerouter"
version = "1.7.0"
authors = ["Miguel Rodríguez Pérez <miguel@det.uvigo.gal>"]
edition = "2018"
description = "A shuffling router for the Redes de Ordenadores subject"
repository = "https://github.com/RedesdeOrdenadores/ShuffleRouter.git"
license-file = "LICENSE"

[dependencies]
stderrlog = "0.5"
log = "0.4"
mio = { version = "0.7.13", features = ["os-poll", "net"] }
rand = { version = "0.8", features = ["log"] }
thiserror = "1.0.26"
nom = "7.0.0"
anyhow = "1.0"
num_cpus = "1.8"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread", "signal"] }

[dependencies.clap]
version = "3.0.0-beta.4"
features = ["wrap_help"]
