[package]
name = "shufflerouter"
version = "1.7.1"
authors = ["Miguel Rodríguez Pérez <miguel@det.uvigo.gal>"]
edition = "2021"
description = "A shuffling router for the Redes de Ordenadores subject"
repository = "https://github.com/RedesdeOrdenadores/ShuffleRouter.git"
license-file = "LICENSE"

[dependencies]
stderrlog = "0.5"
log = "0.4"
mio = { version = "0.8.4", features = ["os-poll", "net"] }
rand = { version = "0.8", features = ["log"] }
thiserror = "1.0.34"
nom = "7.1.1"
anyhow = "1.0"
num_cpus = "1.13"
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread", "signal"] }

[dependencies.clap]
version = "3.2"
features = ["derive", "wrap_help"]
